--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
-    "build": "netlify deploy --prod"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "Erick Oyugi",
   "license": "ISC",
