--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Erick Oyugi",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -24,6 +25,7 @@
     "node-datetime": "^2.1.2",
     "nodemon": "^3.1.0",
     "qrcode": "^1.5.3",
+    "speakeasy": "^2.0.0",
     "uuid": "^9.0.1"
   }
 }
